<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_bottom_sheet_v1"
    android:backgroundTint="@color/neutral_light_lightest"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@drawable/shape_oval_surface_variant"
            android:backgroundTint="@color/neutral_dark_lightest" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/message_what_want"
            android:textColor="@color/neutral_dark_darkest"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_vnd"
                android:textColor="@color/neutral_dark_darkest"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/message_how_much"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/highlight_darkest"
                android:textColorHint="@color/neutral_dark_lightest"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/message_what_message"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="70"
            android:maxLines="2"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:textColor="@color/highlight_darkest"
            android:textColorHint="@color/neutral_dark_lightest"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="80dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/button_remove"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/action_delete_all"
                android:textColor="@color/neutral_dark_darkest"
                app:strokeColor="@color/neutral_dark_darkest" />

            <Button
                android:id="@+id/button_save"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/neutral_dark_darkest"
                android:text="@string/action_save"
                android:textColor="@color/neutral_light_lightest" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>