<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_bottom_sheet_v1"
    android:backgroundTint="@color/neutral_light_lightest"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@drawable/shape_oval_surface_variant"
            android:backgroundTint="@color/neutral_dark_lightest" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:text="@string/action_backup_data"
            android:textColor="@color/neutral_dark_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/message_describe_backup"
            android:textColor="@color/neutral_dark_light"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:text="@string/action_restore_data"
            android:textColor="@color/neutral_dark_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/message_describe_restore"
            android:textColor="@color/neutral_dark_light"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>